# week6_player_enhanced_edition

./: AudioPlayer.cpp  AudioPlayer.h  CMakeLists.txt  Player.cpp  Player.h  README.md  VideoPlayer.cpp  VideoPlayer.h  test.cpp
include/SoundTouch/lib/: SoundTouch.lib  SoundTouchD.lib  SoundTouch_x64.lib
lib/: SoundTouchD_x64.lib
